--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,9 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+.body {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -295,15 +298,20 @@ h1 {
 }
 
 .container_youwon {
+
+    text-align: center;
     width: 29.4rem;
-    height: 35rem;
+    /* height: 100%; */
+    padding-bottom: rem;
+    border: #000 solid;
     /* Add your background pattern here */
     --sz: 15px;
     --c0: #000;
     --c1: #c71175;
     --ts: 50% / calc(var(--sz) * 8) calc(var(--sz) * 16);
     margin: 0;
-    padding: 0;
+    padding-bottom: 932px;
+    ;
     overflow: hidden;
     --dot: var(--c1) 0 calc(var(--sz) * 0.78),
         #fff0 calc(calc(var(--sz) * 0.78) + 1px) 100%;
@@ -355,8 +363,9 @@ h1 {
     place-items: center;
     overflow: hidden;
     border-radius: 20px;
-    left: 9rem;
+    left: 5.5rem;
     top: 10rem;
+    padding: 3em;
 }
 
 .card h2 {
